<resources>
    <string name="app_name">Inventory MVP</string>
    <string name="avatar">Avatar</string>
    <string name="tap_to_set_photo">Tap to set photo</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter the name</string>
    <string name="hint_price">Enter the price</string>
    <string name="hint_quantity">Enter the quantity</string>
    <string name="hint_supplier">Enter the supplier</string>
    <string name="save">SAVE</string>
    <string name="error_saving_item">Please complete all fields.</string>
    <string name="item_saved">Item saved!</string>
    <string name="clear_all_creatures">Delete all Items</string>
    <string name="add_item">Add Item</string>
    <string name="item_empty">Items deleted</string>
</resources>
