<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.mvpapp.view.item.ItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tapLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_set_photo"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/avatarImageView"
            app:layout_constraintEnd_toEndOf="@+id/avatarImageView"
            app:layout_constraintStart_toStartOf="@+id/avatarImageView"
            app:layout_constraintTop_toTopOf="@+id/avatarImageView"
            tools:text="@string/tap_to_set_photo" />

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:hint="@string/hint_name"
            android:inputType="text"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameLabel" />

        <TextView
            android:id="@+id/intelligenceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:hint="@string/hint_price"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/intelligenceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/intelligenceLabel" />


        <TextView
            android:id="@+id/strengthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intelligenceLabel" />

        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/strengthLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/strengthLabel" />


        <TextView
            android:id="@+id/enduranceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/supplier"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strengthLabel" />

        <EditText
            android:id="@+id/supplierEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:hint="@string/hint_supplier"
            android:inputType="text"
            app:layout_constraintBaseline_toBaselineOf="@+id/enduranceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/enduranceLabel" />


        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="Please check that you filled all fields"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enduranceLabel"
            tools:text="Please check that you filled all fields" />



        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>